The website is no longer visible for screens with widths below 250px.

--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -8,4 +8,8 @@ body {
     #root {
         @include LoginPage();
     }
+
+    @media screen and (max-width: 249px) {
+        display: none;
+    }
 }
